deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openindu-portal
  labels:
    app: openindu-portal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: openindu-portal
